fixed dark mode render, fixed weird flex thing

--- a/css/dark-styles.css
+++ b/css/dark-styles.css
@@ -52,12 +52,13 @@ body {
   }
 }
 
-.pixel-box {
+#pixel-box {
   position: flex;
   height: 100%;
 }
 
 .contact-box {
+  margin-top: auto;
   font-size: 1.5em;
   align-items: flex-end;
   display: flex;
@@ -98,7 +99,7 @@ body {
   }
 }
 
-.main {
+#main {
   width: 100%;
   height: 97vh;
   display: flex;
@@ -106,10 +107,13 @@ body {
   align-items: flex-start;
   z-index: 1000;
   justify-content: space-between;
+  flex-wrap: wrap;
+  justify-self: end;
 }
 @media only screen and (max-width: 480px) {
-  .main {
+  #main {
     flex-direction: column-reverse;
+    flex-wrap: no-wrap;
   }
 }
 
