--- a/css/scss/_styles.scss
+++ b/css/scss/_styles.scss
@@ -48,12 +48,13 @@ body {
     }
 }
 
-.pixel-box {
+#pixel-box {
   position: flex;
   height: 100%;
 }
 
 .contact-box {
+    margin-top:auto;
     font-size: 1.5em;
     align-items: flex-end;
     display: flex;
@@ -91,7 +92,7 @@ h3 {
     }
 }
 
-.main {
+#main {
     width: 100%;
     height: 97vh;
     display: flex;
@@ -99,8 +100,11 @@ h3 {
     align-items: flex-start;
     z-index: 1000;
     justify-content: space-between;
+    flex-wrap: wrap;
+    justify-self: end;
     @media only screen and (max-width: 480px) {
       flex-direction: column-reverse;
+      flex-wrap: no-wrap;
     }
 }
 
